Move and rewrite strlen methods